--- a/tmux.conf
+++ b/tmux.conf
@@ -6,11 +6,13 @@
 set -g prefix C-x
 set -g prefix2 C-a
 
-
 # Reload tmux conf.
 unbind r
 bind r source-file ~/.tmux.conf\; display "Reloaded conf."
 
+# Start new shells in current working directory
+bind-key c new-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
 
-new-session -n $HOST
-
+set-option -g status-position top
