--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,16 @@
 set -g prefix C-x
 set -g prefix2 C-a
 
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
 # Reload tmux conf.
 unbind r
 bind r source-file ~/.tmux.conf\; display "Reloaded conf."
