--- a/tmux.conf
+++ b/tmux.conf
@@ -25,4 +25,6 @@ bind-key c new-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 
+set -s escape-time 0
+
 set-option -g status-position top
