--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,13 @@
-############################################################################
-# Fix tmux attach
-############################################################################
-# if run as "tmux attach", create a session if one does not already exist
-
 set -g prefix C-x
 set -g prefix2 C-a
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
+unbind b
+unbind n
+#bind b  previous-window
+#bind n next-window
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
@@ -24,7 +23,33 @@ bind r source-file ~/.tmux.conf\; display "Reloaded conf."
 bind-key c new-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
+bind \ split-window -h -c "#{pane_current_path}"
+bind = split-window -c "#{pane_current_path}"
 
 set -s escape-time 0
 
 set-option -g status-position top
+
+# large history
+set-option -g history-limit 10000
+
+# colors
+set-option -g default-terminal "screen-256color" #"xterm-256color" # "screen-256color"
+
+# utf8 support
+set-window-option -g utf8 on
+
+# basic settings
+set-window-option -g xterm-keys on # for vim
+set-window-option -g mode-keys vi # vi key
+set-window-option -g monitor-activity on
+
+# Automatically set window title
+setw -g automatic-rename
+
+#setw -g mouse-resize-pane on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+# vi movement keys
+unbind j
+set-option -g status-keys vi
